--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
-MYSQL_ROOT_PASSWORD=root
-DB_USER=user
-DB_PASSWORD=Password@123
+MYSQL_ROOT_PASSWORD=asd;flkjasd;lfkjas;dlkfj
+DB_USER=javid
+DB_PASSWORD=javid_9999
 DB_HOST=db
 DB_PORT=3306
 DB_NAME=recordings
-SERVER_PORT=80
+SERVER_PORT=8070
 ENVIRONMENT=local
-MIGRATION_SOURCE_PATH=./migrations
