update dockerfile multi stage

--- a/Dockerfilee
+++ b/Dockerfilee
@@ -3,14 +3,15 @@ FROM golang:1.21rc2-alpine3.18 AS builder
 
 WORKDIR /app
 
-COPY go.*           ./
-COPY *.go           ./
-COPY api/           ./api
-COPY config/        ./config
-COPY database/      ./database
-COPY migrations/    ./migrations
+COPY go.*        ./
+RUN go mod download
 
-RUN go mod tidy && go mod download
+COPY *.go        ./
+COPY api/        ./api
+COPY config/     ./config
+COPY database/   ./database
+COPY migrations/ ./migrations
+COPY docs/       ./docs
 
 RUN CGO_ENABLE=0 GOOS=linux GOARCH=amd64 -ldflags="-w -s" go build main.go
 
@@ -20,6 +21,6 @@ FROM scratch
 
 COPY --from=builder /app/main /
 
-EXPOSE 80
+EXPOSE 8070
 
 CMD [ "/main" ]
