--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,26 @@ version: '3.9'
 
 services:
   db:
-    image: mysql:8.0
+    image: my-mysql:8.0
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
     cap_add:
       - SYS_NICE
     networks:
       - network
-    env_file:
-      - .env
     environment:
-      - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}"
-      - "MYSQL_USER=${DB_USER}"
-      - "MYSQL_PASSWORD=${DB_PASSWORD}"
-      - "MYSQL_DATABASE=${DB_NAME}"   
+      - "MYSQL_ROOT_PASSWORD=asd;flkjasd;lfkjas;dlkfj"
+      - "MYSQL_USER=javid"
+      - "MYSQL_PASSWORD=javid_9999"
+      - "MYSQL_DATABASE=recordings"   
     volumes:
       - db_vol:/var/lib/mysql
+    env_file:
+      - .env
 
   adminer:
     image: adminer:latest
@@ -34,7 +40,8 @@ services:
     volumes:
       - ".env:/app/.env"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     links:
       - "db:database"
     env_file:
