--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-MYSQL_ROOT_PASSWORD=asd;flkjasd;lfkjas;dlkfj
-DB_USER=javid
-DB_PASSWORD=javid_9999
-DB_HOST=db
-DB_PORT=3306
-DB_NAME=recordings
-SERVER_PORT=8070
-ENVIRONMENT=local
+MYSQL_ROOT_PASSWORD="asd;flkjasd;lfkjas;dlkfj"
+DB_USER="javid"
+DB_PASSWORD="javid_9999"
+DB_HOST="db"
+DB_PORT="3306"
+DB_NAME="recordings"
+SERVER_PORT="8070"
+ENVIRONMENT="local"
+JWT_KEY="hdcbm9dsg_d8vgy^s-o64e_n6cwj^i=&t6tnx7v0(p&gov1j(l"
