--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,12 @@ stages:
 
 run-test:
   stage: test
+  # TODO
 
 build-docker-image:
   stage: build
+  # TODO
 
 deploy:
   stage: deploy
+  # TODO
