--- a/dockerfile/album-dockerfile/Dockerfile
+++ b/dockerfile/album-dockerfile/Dockerfile
@@ -2,17 +2,17 @@ FROM golang:1.21rc2-alpine3.18
 
 WORKDIR /app
 
-COPY ../../go.*             ./
+COPY ../../go.*             .
 RUN go mod download
 
 COPY ../../*.go             ./
 COPY ../../api/             ./api
-COPY ../../authentication   ./authentication
+COPY ../../authentication/  ./authentication
 COPY ../../config/          ./config
 COPY ../../database/        ./database
 COPY ../../docs/            ./docs
-COPY ../../middlewares      ./middlewares
-COPY ../../swagger          ./swagger
+COPY ../../middlewares/     ./middlewares
+COPY ../../swagger/         ./swagger
 
 EXPOSE 8070
 
