update .env file

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-MYSQL_ROOT_PASSWORD="asd;flkjasd;lfkjas;dlkfj"
+MYSQL_ROOT_PASSWORD="ASDK;LFJ2948RFK ASDFJQWFFASDFJKASLKDJFAS;DUQWOIEFJS"
 DB_USER="javid"
-DB_PASSWORD="javid_9999"
+DB_PASSWORD="javid9999"
 DB_HOST="db"
 DB_PORT="3306"
-DB_NAME="recordings"
+DB_NAME="recording"
 SERVER_PORT="8070"
-ENVIRONMENT="local"
-JWT_KEY="hdcbm9dsg_d8vgy^s-o64e_n6cwj^i=&t6tnx7v0(p&gov1j(l"
+JWT_KEY="aslkdjfxcvm sdkfj;sdakl;fjq34ru521@@!@#ja;slkdf89qwfskldf"
+API_HOST="0.0.0.0"
