--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3.9'
+version: '3.8'
 
 services:
   db:
-    image: my-mysql:8.0
+    image: private.jlinux.ir/database/my-mysql:8.0
     healthcheck:
       test: ["CMD-SHELL", "mysqladmin ping -h localhost"]
       interval: 30s
@@ -24,7 +24,7 @@ services:
       - .env
 
   adminer:
-    image: adminer:latest
+    image: public.jlinux.ir/utile/adminer:latest
     container_name: adminer
     ports:
       - "8081:8080"
@@ -32,7 +32,7 @@ services:
       - network
 
   web:
-    image: album:latest
+    image: private.jlinux.ir/app/album:latest
     ports:
       - "8070:8070"
     networks:
