--- a/dockerfile/mysql-dockerfile/Dockerfile
+++ b/dockerfile/mysql-dockerfile/Dockerfile
@@ -1,4 +1,4 @@
-FROM mysql:8.0
+FROM public.jlinux.ir/database/mysql:8.0
 
 COPY ./dockerfile/mysql-dockerfile/healthcheck.sh /usr/local/bin
 RUN chmod +x /usr/local/bin/healthcheck.sh
