--- a/dockerfile/album-dockerfile/Dockerfile
+++ b/dockerfile/album-dockerfile/Dockerfile
@@ -1,18 +1,26 @@
-FROM golang:1.21rc2-alpine3.18 
+# Stage one build go app
+# FROM public.jlinux.ir/language/go/golang:1.19 AS builder
 
+FROM public.jlinux.ir/language/go/golang:1.19
 WORKDIR /app
 
-COPY ../../go.*             .
+COPY ../../go.*              ./
 RUN go mod download
 
-COPY ../../*.go             ./
-COPY ../../api/             ./api
-COPY ../../authentication/  ./authentication
-COPY ../../config/          ./config
-COPY ../../database/        ./database
-COPY ../../docs/            ./docs
-COPY ../../middlewares/     ./middlewares
-COPY ../../swagger/         ./swagger
+COPY ../../*.go              ./
+COPY ../../api/              ./api
+COPY ../../authentication/   ./authentication
+COPY ../../config/           ./config
+COPY ../../database/         ./database
+COPY ../../docs/             ./docs
+COPY ../../middlewares/      ./middlewares
+COPY ../../swagger/          ./swagger
+
+RUN CGO_ENABLE=0 GOOS=linux GOARCH=amd64 go build main.go
+
+# Stage two create image 
+# FROM scratch
+# COPY --from=builder /app/main /
 
 EXPOSE 8070
 
