--- a/mysql-docker-compose.yml
+++ b/mysql-docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: mysql:8.0
+    image: public.jlinux.ir/database/mysql:8.0
     cap_add:
       - SYS_NICE
     networks:
